# lazily-cpp

./: .gitignore  AGENTS.md  BENCHMARKS.md  CMakeLists.txt  Makefile  README.md  ROADMAP.md
.github/workflows/: ci.yml
benches/: CMakeLists.txt  bench_main.cpp  pubsub_load.cpp
include/lazily/: async_context.hpp  async_reactive_family.hpp  cell.hpp  codec.hpp  collections.hpp  command.hpp  context.hpp  coordination.hpp  crdt.hpp  crdt_tree.hpp  ffi.hpp  hlc.hpp  ipc.hpp  lazily.hpp  lossless_tree_crdt.hpp  membership.hpp  merge.hpp  msgpack.hpp  presence.hpp  queue.hpp  rateshape.hpp  rc_ptr.hpp  reactive_family.hpp  receipt.hpp  relay.hpp  reliable_sync.hpp  resilience.hpp  sem_tree.hpp  service.hpp  signaling.hpp  small_any.hpp  small_fn.hpp  small_vec.hpp  stable_id.hpp  state_machine.hpp  statechart.hpp  temporal.hpp  thread_safe.hpp  thread_safe_reactive_family.hpp  transport.hpp  (+3 more)
src/: ffi.cpp
tests/: CMakeLists.txt  compile_fail_compute_escape.cpp  compile_fail_formula_set.cpp  compute_fortification.cpp  test_async_reactive_family.cpp  test_cell_kernel.cpp  test_codec.cpp  test_collections.cpp  test_command_conformance.cpp  test_computed_ripple_when.cpp  test_concurrency.cpp  test_coordination_conformance.cpp  test_core.cpp  test_crdt.cpp  test_crdt_tree.cpp  test_family_sync.cpp  test_formal.cpp  test_ipc.cpp  test_json.hpp  test_lossless_tree_conformance.cpp  test_membership_conformance.cpp  test_merge.cpp  test_outbox_store.cpp  test_presence_conformance.cpp  test_queue.cpp  test_rateshape_conformance.cpp  test_reactive_family.cpp  test_reactive_graph_conformance.cpp  test_relay.cpp  test_reliable_sync.cpp  test_require.hpp  test_resilience_conformance.cpp  test_seqcrdt_conformance.cpp  test_service_conformance.cpp  test_smoke.cpp  test_spec_fixture.hpp  test_statechart.cpp  test_temporal_conformance.cpp  test_thread_safe_reactive_family.cpp  test_topic_conformance.cpp  (+4 more)
